# linux_libnfc-nci

./: CMakeLists.txt
cmake/: Config.cmake.in  config.h.in
conf/: libnfc-nxp-pn548.conf
demoapp/: CMakeLists.txt  main.c
src/halimpl/pn54x/hal/: phNxpNciHal.c
src/halimpl/pn54x/inc/: phNxpNciHal_Adaptation.h
src/halimpl/pn54x/tml/i2c/: phTmlNfc.h  phTmlNfc_i2c.c
src/halimpl/pn54x/utils/: phNxpConfig.cpp
src/include/: linux_nfc_api.h
src/libnfc-nci/adaptation/: NfcAdaptation.cpp
src/libnfc-nci/include/: NfcAdaptation.h
src/libnfc-nci/nfa/dm/: nfa_dm_api.c
src/libnfc-nci/nfa/include/: nfa_api.h
src/service/: linux_nfc_api.c
src/service/interface/: nativeNfcManager.cpp  nativeNfcManager.h
